--- a/ex10.html
+++ b/ex10.html
@@ -18,7 +18,7 @@
         c.bookeeper = "duru";
         document.write("bookeeper : "  +c.bookeeper+"<br/>");
         c["data scientist"] ="yo";
-        document.write("data scientist : "  +c["data scientist"]+"<br/>");
+        document.write("data scientist : "  +c["data scientist"]+"<br/>")
         
     </script>
 </body>
